# md-table-format

./: .pre-commit-hooks.yaml  README.md  md-table-format.py  pre-commit  setup.cfg
md_table_format.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: main.py
test/basic/: basic-formatted.md  basic-unformatted.md
test/complicated-format/: compl-formatted.md  compl-unformatted.md
test/multiple/: basic-unformatted.md  multiple-formatted.md  multiple-unformatted.md
test/notable/: failing-table.md  no-table.md
test/surrounded/: surrounded-by-text-formatted.md  surrounded-by-text-unformatted.md
