[metadata]
name = md-table-format
description = Markdown table formatter
version = 1.0
author = Remi SEGARD
author_email = r.segard@hotmail.fr
license = MIT
url = https://github.com/RemiSEGARD/md-table-format/blob/master/.pre-commit-hooks.yaml

[options]
packages = find:

[options.entry_points]
console_scripts =
    md-table-format = src.main:main

